--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,9 @@
 {
-  "semi": false,
-  "trailingComma": "es5",
+  "semi": true,
+  "trailingComma": "none",
   "singleQuote": true,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "bracketSpacing": true,
+  "bracketSameLine": true
 }
