--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.4",
+    "react-icons": "^4.8.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
